--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/582ec802ae.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Web tech playground</title>
-</head>
-<body>
-    <h1>Web Tech Playground</h1>
+  </head>
+  <body>
+    <!-- <h1>Web Tech Playground</h1> -->
 
+    <div class="login-container">
+      <div class="logo"></div>
+      <div class="title">Steelvelvet Productions Inc.</div>
+      <div class="sub-title">BETA</div>
+      <div class="fields">
+        <div class="username">
+          <i class="far fa-user"></i>
+          <input type="username" placeholder="username" class="user-input" />
+        </div>
+        <div class="password">
+            <i class="fas fa-key"></i>
+          <input type="password" placeholder="password" class="pass-input" />
+         
+        </div>
+        <button class="signin-button">Login</button>
+        <div class="link">
+            <a href="#">Forgot password?</a> or <a href="#">Sign up</a>
+        </div>
+      </div>
+    </div>
 
     <script defer src="index.js"></script>
-</body>
+  </body>
 </html>
