Changed key icon to lock

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input type="username" placeholder="username" class="user-input" />
         </div>
         <div class="password">
-            <i class="fas fa-key"></i>
+            <i class="fas fa-lock"></i>
           <input type="password" placeholder="password" class="pass-input" />
          
         </div>
