--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Web tech playground</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Web Tech Playground</h1>
 
+    <div class="container">
+      <div>Container</div>
+      <div>Disappears in xs screens</div>
+      <div>Turns to green in sm screens</div>
+      <div>Turns to black in m to large screens</div>
+    </div>
 
     <script defer src="index.js"></script>
-</body>
+  </body>
 </html>
