--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <title>Web tech playground</title>
 </head>
 <body>
-    <h1>Web Tech Playground</h1>
-
+    <div class="container">
+        <div class="child1">
+           Child 1
+        </div>
+        <div class="child2">
+            Child 2
+        </div>
+        <div class="child3">
+            Child 3
+        </div>
+        <!-- <div class="child4">
+            Child 4
+        </div> -->
+    </div>
 
     <script defer src="index.js"></script>
 </body>
