Basic grid with gaps

--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Web tech playground</title>
-</head>
-<body>
-    <h1>Web Tech Playground</h1>
-
-
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere
+        officiis asperiores minima cumque tempore distinctio facilis velit,
+        dolores, architecto doloribus debitis dolor quis fugiat et est esse
+        quidem quas molestias beatae voluptatum omnis accusantium consectetur.
+        Quaerat eaque doloremque non tempore iusto possimus recusandae minima
+        veritatis adipisci tenetur quidem inventore fugiat alias consequatur,
+        quae ullam placeat dolores enim quo doloribus! Modi ut debitis error
+        voluptas. Eveniet, consequuntur quam. Neque nesciunt quibusdam placeat
+        ducimus! Aut deleniti necessitatibus voluptatem animi provident illum
+        consequatur.
+      </div>
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit laborum
+        quia provident assumenda qui, dolorum quos dolor, sint quod cumque minus
+        velit, facilis voluptatum enim repudiandae possimus esse error! At.
+      </div>
+      <div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere
+        officiis asperiores minima cumque tempore distinctio facilis velit,
+        dolores, architecto doloribus debitis dolor quis fugiat et est esse
+        quidem quas molestias beatae voluptatum omnis accusantium consectetur.
+        Quaerat eaque doloremque non tempore iusto possimus recusandae minima
+        veritatis adipisci tenetur quidem inventore fugiat alias consequatur,
+        quae ullam placeat dolores enim quo doloribus! Modi ut debitis error
+        voluptas. Eveniet, consequuntur quam. Neque nesciunt quibusdam placeat
+        ducimus! Aut deleniti necessitatibus voluptatem animi provident illum
+        consequatur.
+      </div>
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit laborum
+        quia provident assumenda qui, dolorum quos dolor, sint quod cumque minus
+        velit, facilis voluptatum enim repudiandae possimus esse error! At.
+      </div>
+      <div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere
+        officiis asperiores minima cumque tempore distinctio facilis velit,
+        dolores, architecto doloribus debitis dolor quis fugiat et est esse
+        quidem quas molestias beatae voluptatum omnis accusantium consectetur.
+        Quaerat eaque doloremque non tempore iusto possimus recusandae minima
+        veritatis adipisci tenetur quidem inventore fugiat alias consequatur,
+        quae ullam placeat dolores enim quo doloribus! Modi ut debitis error
+        voluptas. Eveniet, consequuntur quam. Neque nesciunt quibusdam placeat
+        ducimus! Aut deleniti necessitatibus voluptatem animi provident illum
+        consequatur.
+      </div>
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit laborum
+        quia provident assumenda qui, dolorum quos dolor, sint quod cumque minus
+        velit, facilis voluptatum enim repudiandae possimus esse error! At.
+      </div>
+    </div>
     <script defer src="index.js"></script>
-</body>
+  </body>
 </html>
