Expanded flexbox properties on containers

--- a/index.html
+++ b/index.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Web tech playground</title>
-  </head>
-  <body>
-    <div class="container">
-        <div class="parent">
-            <div class="child1">
-                Child 1
-            </div>
-            <div class="child2">
-                Child 2
-            </div>
-            <div class="child3">
-                Child 3
-            </div>
-            <!-- <div class="child4">
-                Child 4
-            </div> -->
-            <div class="description">
-                <div>Defaults to row </div>
-                <div>horizontal to flex-start </br>and vertical to flex-start</div>
-            </div>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Web tech playground</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="item">
+      Child 1
     </div>
-    <script defer src="index.js"></script>
-  </body>
+    <div class="item">
+      Child 2
+    </div>
+    <div class="item">
+      Child 3
+    </div>
+    <div class="item">
+      Child 4
+    </div>
+    <div class="item">
+      Child 5
+    </div>
+    <div class="item">
+      Child 1
+    </div>
+    <div class="item">
+      Child 2
+    </div>
+    <div class="item">
+      Child 3
+    </div>
+    <div class="item">
+      Child 4
+    </div>
+    <div class="item">
+      Child 5
+    </div>
+  </div>
+  <script defer src="index.js"></script>
+</body>
+
 </html>
