flex tutorial kevin powell cont.

--- a/index.html
+++ b/index.html
@@ -5,41 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style-flex-items.css" />
   <title>Web tech playground</title>
 </head>
 
 <body>
   <div class="container">
-    <div class="item">
+    <div class="item one">
       Child 1
     </div>
-    <div class="item">
+    <div class="item two">
       Child 2
     </div>
-    <div class="item">
+    <div class="item three">
       Child 3
-    </div>
-    <div class="item">
-      Child 4
-    </div>
-    <div class="item">
-      Child 5
-    </div>
-    <div class="item">
-      Child 1
-    </div>
-    <div class="item">
-      Child 2
-    </div>
-    <div class="item">
-      Child 3
-    </div>
-    <div class="item">
-      Child 4
-    </div>
-    <div class="item">
-      Child 5
     </div>
   </div>
   <script defer src="index.js"></script>
