--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Web tech playground</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Web tech playground</title>
 </head>
+
 <body>
-    <h1>Web Tech Playground</h1>
+  <div class="hero">
+    <p>Things are <span>awesome</span> here at</p>
+    <h1>Awesome<span>Co</span></h1>
+    <p>We <strong>Design</strong> and <strong>Develop Awesome</strong> stuff</p>
+  </div>
 
+  <div class="sales-points">
+    <div class="sales-point">
+      <h2>Sales Point 1</h2>
+      <p>Maecenas id volutpat tellus. Praesent at rhoncus ante, non sollicitudin nisl.</p>
+    </div>
+    <div class="sales-point">
+      <h2>Sales Point 2</h2>
+      <p>Maecenas id volutpat tellus. Praesent at rhoncus ante, non sollicitudin nisl.</p>
+    </div>
+    <div class="sales-point">
+      <h2>Sales Point 3</h2>
+      <p>Maecenas id volutpat tellus. Praesent at rhoncus ante, non sollicitudin nisl.</p>
+    </div>
+  </div>
 
-    <script defer src="index.js"></script>
+  <div class="cta">
+    <div class="cta-text">
+      <h2>Call to <span>Action</span></h2>
+      <p>Sed lacus leo, auctor ut odio non, tincidunt blandit nunc. Integer mauris dolor, maximus eu consectetur non,
+        imperdiet sit amet nisi. Nam in sem finibus mi hendrerit ornare eu eu leo. Interdum et malesuada fames ac ante
+        ipsum primis in faucibus. Sed vestibulum, magna sit amet interdum fringilla.</p>
+      <a href="" class="btn">Buy Now</a>
+    </div>
+  </div>
+
+  <!-- <script defer src="index.js"></script> -->
 </body>
+
 </html>
