--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style-flex-items.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>Web tech playground</title>
 </head>
 
@@ -19,6 +19,12 @@
     </div>
     <div class="item three">
       Child 3
+    </div>
+    <div class="item four">
+      Child 4
+    </div>
+    <div class="item five">
+      Child 5
     </div>
   </div>
   <script defer src="index.js"></script>
