Progressing with css grids

--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
         quia provident assumenda qui, dolorum quos dolor, sint quod cumque minus
         velit, facilis voluptatum enim repudiandae possimus esse error! At.
       </div>
-      <div>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere
-        officiis asperiores minima cumque tempore distinctio facilis velit,
-        dolores, architecto doloribus debitis dolor quis fugiat et est esse
-        quidem quas molestias beatae voluptatum omnis accusantium consectetur.
-        Quaerat eaque doloremque non tempore iusto possimus recusandae minima
-        veritatis adipisci tenetur quidem inventore fugiat alias consequatur,
-        quae ullam placeat dolores enim quo doloribus! Modi ut debitis error
-        voluptas. Eveniet, consequuntur quam. Neque nesciunt quibusdam placeat
-        ducimus! Aut deleniti necessitatibus voluptatem animi provident illum
-        consequatur.
+      <div class="nested">
+        <div>Lorem nested</div>
+        <div>Lorem nested</div>
+        <div>Lorem nested</div>
+        <div>Lorem nested</div>
+        <div>Lorem nested</div>
+        <div>Lorem nested</div>
+        <div>Lorem nested</div>
+        <div>Lorem nested</div>
       </div>
       <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit laborum
