Mark up and images

--- a/index.html
+++ b/index.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Web tech playground</title>
+    <title>Acme Web Solutions</title>
 </head>
+
 <body>
-    <h1>Web Tech Playground</h1>
+    <header id="showcase" class="grid">
+        <div class="bg-image"></div>
+        <h1>Welcome to Acme Web Solutions</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odit ad quaerat vel autem cumque eos illum
+            amet ullam eligendi.</p>
+        <a href="#section-b" class="btn">Read More</a>
+    </header>
 
+    <main id="main">
+        <section id="section-a" class="grid">
+            <div class="content-wrap">
+                <h2 class="content-title">Web & Application Development</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus accusantium possimus, minima
+                    velit dicta odit similique quasi provident saepe ad. Sequi, minima ratione id commodi mollitia
+                    doloremque aut sapiente vitae vero incidunt dolorem. Tenetur possimus autem deserunt impedit, magnam
+                    laudantium!</p>
+            </div>
+        </section>
 
+        <section id="section-b" class="grid">
+            <ul>
+                <li>
+                    <div class="card">
+                        <img src="./images/pexels-lukas-574077.jpg" alt="">
+                        <div class="card-content">
+                            <h3 class="title">Web Development</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In minima aliquid nulla culpa
+                                maiores debitis corporis tempora recusandae? Sit, blanditiis?</p>
+
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img src="./images/pexels-tofroscom.jpg" alt="">
+                        <div class="card-content">
+                            <h3 class="title">Mobile Application</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In minima aliquid nulla culpa
+                                maiores debitis corporis tempora recusandae? Sit, blanditiis?</p>
+
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img src="./images/pexels-lukas.jpg" alt="">
+                        <div class="card-content">
+                            <h3 class="title">Tech Marketing</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In minima aliquid nulla culpa
+                                maiores debitis corporis tempora recusandae? Sit, blanditiis?</p>
+
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        
+        <section id="section-c" class="grid">
+            <div class="content-wrap">
+                <h2 class="content-title">We handle all of your digital needs.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio natus incidunt veritatis fugit dolorem? Voluptatem dignissimos distinctio ipsa error perspiciatis.</p>
+            </div>
+        </section>
+
+        <section id="section-d" class="grid">
+            <div class="box">
+                <div class="content-title">Contact Us</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae libero ratione ipsam, mollitia fugiat dolores labore nisi facilis sunt sequi.</p>
+                <p>contact@acmewebsolutions.test</p>
+            </div>
+            <div class="box">
+                <h2 class="content-title">About Our Company</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quibusdam rem doloremque quaerat eos numquam aliquid iusto unde. Quas perspiciatis aliquid labore! Qui consequatur impedit nisi dolorum doloribus possimus quidem.</p>
+            </div>
+        </section>        
+    </main>
+    <footer id="main-footer" class="grid">
+        <div>Acme Web Solutions</div>
+        <div>Project by <a href="" target="_blank">Joey Vico</a></div>
+    </footer>
     <script defer src="index.js"></script>
 </body>
+
 </html>
