Styling done, prior to gridifying and making it more reponsive:

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <body>
     <header id="showcase" class="grid">
         <div class="bg-image"></div>
-        <h1>Welcome to Acme Web Solutions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odit ad quaerat vel autem cumque eos illum
-            amet ullam eligendi.</p>
-        <a href="#section-b" class="btn">Read More</a>
+        <div class="content-wrap">
+            <h1>Welcome to Acme Web Solutions</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odit ad quaerat vel autem cumque eos
+                illum
+                amet ullam eligendi.</p>
+            <a href="#section-b" class="btn">Read More</a>
+        </div>
     </header>
 
     <main id="main">
@@ -66,25 +69,29 @@
                 </li>
             </ul>
         </section>
-        
+
         <section id="section-c" class="grid">
             <div class="content-wrap">
                 <h2 class="content-title">We handle all of your digital needs.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio natus incidunt veritatis fugit dolorem? Voluptatem dignissimos distinctio ipsa error perspiciatis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio natus incidunt veritatis fugit dolorem?
+                    Voluptatem dignissimos distinctio ipsa error perspiciatis.</p>
             </div>
         </section>
 
         <section id="section-d" class="grid">
             <div class="box">
-                <div class="content-title">Contact Us</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae libero ratione ipsam, mollitia fugiat dolores labore nisi facilis sunt sequi.</p>
+                <h2 class="content-title">Contact Us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae libero ratione ipsam, mollitia
+                    fugiat dolores labore nisi facilis sunt sequi.</p>
                 <p>contact@acmewebsolutions.test</p>
             </div>
             <div class="box">
                 <h2 class="content-title">About Our Company</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quibusdam rem doloremque quaerat eos numquam aliquid iusto unde. Quas perspiciatis aliquid labore! Qui consequatur impedit nisi dolorum doloribus possimus quidem.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quibusdam rem doloremque quaerat eos
+                    numquam aliquid iusto unde. Quas perspiciatis aliquid labore! Qui consequatur impedit nisi dolorum
+                    doloribus possimus quidem.</p>
             </div>
-        </section>        
+        </section>
     </main>
     <footer id="main-footer" class="grid">
         <div>Acme Web Solutions</div>
