--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main id="main">
         <section id="section-a" class="grid">
             <div class="content-wrap">
-                <h2 class="content-title">Web & Application Development</h2>
+                <h2 class="content-title">Web and Application Development</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus accusantium possimus, minima
                     velit dicta odit similique quasi provident saepe ad. Sequi, minima ratione id commodi mollitia
                     doloremque aut sapiente vitae vero incidunt dolorem. Tenetur possimus autem deserunt impedit, magnam
