--- a/index.html
+++ b/index.html
@@ -10,93 +10,99 @@
 </head>
 
 <body>
+    <!-- Header Showcase -->
     <header id="showcase" class="grid">
         <div class="bg-image"></div>
         <div class="content-wrap">
             <h1>Welcome to Acme Web Solutions</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odit ad quaerat vel autem cumque eos
-                illum
-                amet ullam eligendi.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci eum error earum soluta voluptatum nisi
+                laboriosam eos saepe asperiores dolorum.</p>
             <a href="#section-b" class="btn">Read More</a>
         </div>
     </header>
 
+    <!-- Main Area -->
     <main id="main">
+        <!-- Section A -->
         <section id="section-a" class="grid">
             <div class="content-wrap">
-                <h2 class="content-title">Web and Application Development</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus accusantium possimus, minima
-                    velit dicta odit similique quasi provident saepe ad. Sequi, minima ratione id commodi mollitia
-                    doloremque aut sapiente vitae vero incidunt dolorem. Tenetur possimus autem deserunt impedit, magnam
-                    laudantium!</p>
+                <h2 class="content-title">Web & Application Development</h2>
+                <div class="content-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint eligendi possimus? Unde
+                        officiis magnam laborum ipsa distinctio odio, vero dolores dicta aliquam aperiam repellendus.
+                        Perferendis officiis deserunt velit voluptas nobis sequi
+                        animi totam, accusantium, ex eius quia, natus quo?</p>
+                </div>
             </div>
         </section>
 
+        <!-- Section B -->
         <section id="section-b" class="grid">
             <ul>
                 <li>
                     <div class="card">
-                        <img src="./images/pexels-lukas-574077.jpg" alt="">
+                        <img src="https://static.pexels.com/photos/574077/pexels-photo-574077.jpeg" alt="">
                         <div class="card-content">
-                            <h3 class="title">Web Development</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In minima aliquid nulla culpa
-                                maiores debitis corporis tempora recusandae? Sit, blanditiis?</p>
-
+                            <h3 class="card-title">Web Development</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
+                                quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="card">
-                        <img src="./images/pexels-tofroscom.jpg" alt="">
+                        <img src="https://static.pexels.com/photos/261628/pexels-photo-261628.jpeg" alt="">
                         <div class="card-content">
-                            <h3 class="title">Mobile Application</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In minima aliquid nulla culpa
-                                maiores debitis corporis tempora recusandae? Sit, blanditiis?</p>
-
+                            <h3 class="card-title">Mobile Applications</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
+                                quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="card">
-                        <img src="./images/pexels-lukas.jpg" alt="">
+                        <img src="https://static.pexels.com/photos/265087/pexels-photo-265087.jpeg" alt="">
                         <div class="card-content">
-                            <h3 class="title">Tech Marketing</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In minima aliquid nulla culpa
-                                maiores debitis corporis tempora recusandae? Sit, blanditiis?</p>
-
+                            <h3 class="card-title">Tech Marketing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
+                                quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
                 </li>
             </ul>
         </section>
 
+        <!-- Section C -->
         <section id="section-c" class="grid">
             <div class="content-wrap">
-                <h2 class="content-title">We handle all of your digital needs.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio natus incidunt veritatis fugit dolorem?
-                    Voluptatem dignissimos distinctio ipsa error perspiciatis.</p>
+                <h2 class="content-title">We handle all of your digital needs</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam rerum vel earum error fugiat
+                    cupiditate, dolore eius! Minus, explicabo.</p>
             </div>
         </section>
 
+        <!-- Section D -->
         <section id="section-d" class="grid">
             <div class="box">
                 <h2 class="content-title">Contact Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae libero ratione ipsam, mollitia
-                    fugiat dolores labore nisi facilis sunt sequi.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et
+                    voluptas obcaecati unde fuga.</p>
                 <p>contact@acmewebsolutions.test</p>
             </div>
             <div class="box">
                 <h2 class="content-title">About Our Company</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quibusdam rem doloremque quaerat eos
-                    numquam aliquid iusto unde. Quas perspiciatis aliquid labore! Qui consequatur impedit nisi dolorum
-                    doloribus possimus quidem.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti,
+                    quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut
+                    suscipit amet temporibus quo?</p>
             </div>
         </section>
     </main>
+
+    <!-- Footer -->
     <footer id="main-footer" class="grid">
         <div>Acme Web Solutions</div>
-        <div>Project by <a href="" target="_blank">Joey Vico</a></div>
-    </footer>
+        <div>Project By <a href="http://traversymedia.com" target="_blank">Traversy Media</a></div>
+    </footer>>
     <script defer src="index.js"></script>
 </body>
 
