Setup some boxes in container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Web tech playground</title>
 </head>
 <body>
-    <h1>Web Tech Playground</h1>
+    <div class="grid-container">
+        <div class="header">Header</div>
+        <div class="menu">Menu</div>
+        <div class="content">Content</div>
+        <div class="footer">Footer</div>
+    </div>
 
 
     <script defer src="index.js"></script>
