--- a/index.html
+++ b/index.html
@@ -93,7 +93,136 @@
                 </a>
             </div>
         </section>
+
+        <!-- Home cards 2 -->
+        <section class="home-cards">
+            <div class="card">
+                <img src="img/card5.png" alt="">
+                <h3>The new Microsoft Edge</h3>
+                <p>Expect more. World class performance, with more privacy, more productivity, and more value.</p>
+                <a href="#">
+                    Learn more
+                    <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div class="card">
+                <img src="img/card6.jpg" alt="">
+                <h3>The new Microsoft Edge</h3>
+                <p>Expect more. World class performance, with more privacy, more productivity, and more value.</p>
+                <a href="#">
+                    Learn more
+                    <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div class="card">
+                <img src="img/card7.png" alt="">
+                <h3>The new Microsoft Edge</h3>
+                <p>Expect more. World class performance, with more privacy, more productivity, and more value.</p>
+                <a href="#">
+                    Learn more
+                    <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div class="card">
+                <img src="img/card8.png" alt="">
+                <h3>The new Microsoft Edge</h3>
+                <p>Expect more. World class performance, with more privacy, more productivity, and more value.</p>
+                <a href="#">
+                    Learn more
+                    <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </section>
+
+        <!-- Carbon Dark -->
+
+        <section class="carbon-dark">
+            <div class="content">
+                <h2>Commiting To Carbon Negative</h2>
+                <p>Microsoft will be carbon negative by 2030 and by 2050 we will remove all carbon the company has
+                    emitted since it was founded in 1975</p>
+                <a href="#" class="btn">
+                    Learn More
+                    <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </section>
+
+        <!-- Follow social medias -->
+        <section class="follow">
+            <p>Follow Microsoft</p>
+            <a href="#">
+                <img src="img/social-fb.png" alt="facebook">
+            </a>
+            <a href="#">
+                <img src="img/social-twitter.png" alt="twitter">
+            </a>
+            <a href="#">
+                <img src="img/social-linkedin.png" alt="linkedin">
+            </a>
+        </section>
+
     </div>
+        <!--  Links -->
+        <section class="links">
+            <div class="links-inner">
+                <ul>
+                    <li>
+                        <h3>What's New</h3>
+                    </li>
+                    <li><a href="#">Surface Pro X</a></li>
+                    <li><a href="#">Surface Laptop 3</a></li>
+                    <li><a href="#">Surface Pro 7</a></li>
+                    <li><a href="#">Windows 10 apps</a></li>
+                    <li><a href="#">Office apps</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Microsoft Store</h3>
+                    </li>
+                    <li><a href="#">Account Profile</a></li>
+                    <li><a href="#">Download Center</a></li>
+                    <li><a href="#">Microsoft Store support</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Older tracking</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Education</h3>
+                    </li>
+                    <li><a href="#">Microsoft in education</a></li>
+                    <li><a href="#">Office for students</a></li>
+                    <li><a href="#">Office 365 for schools</a></li>
+                    <li><a href="#">Deals for students</a></li>
+                    <li><a href="#">Microsfot Azure</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Enterprise</h3>
+                    </li>
+                    <li><a href="#">Azure</a></li>
+                    <li><a href="#">AppSource</a></li>
+                    <li><a href="#">Automotive</a></li>
+                    <li><a href="#">Government</a></li>
+                    <li><a href="#">Healthcare</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Developer</h3>
+                    </li>
+                    <li><a href="#">Visual Studio</a></li>
+                    <li><a href="#">Windows Dev Center</a></li>
+                    <li><a href="#">Developer Network</a></li>
+                    <li><a href="#">TechNet</a></li>
+                    <li><a href="#">Microsoft Developer</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Company</h3>
+                    </li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">About Microsoft</a></li>
+                    <li><a href="#">Company news</a></li>
+                    <li><a href="#">Privacy at Microsoft</a></li>
+                    <li><a href="#">Investors</a></li>
+                </ul>
+            </div>
+        </section>
 
     <script defer src="index.js"></script>
 </body>
