--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
     <div class="container">
         <!-- Nav -->
         <nav class="main-nav">
