--- a/index.html
+++ b/index.html
@@ -4,14 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <title>Web tech playground</title>
+    <title>Loruki | Cloud Hosting For Everyone</title>
 </head>
 
 <body>
-    <h1>Web Tech Playground</h1>
+    <!-- Navbar-->
+    <div class="navbar">
+        <div class="container flex">
+            <h1 class="logo">Loruki.</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
+    <!-- Showcase -->
+    <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>Easier Deployment</h1>
+                <p>Deploy web apps of all kinds, from large scale eterprise APIs to static websites for individuals.
+                    Fill
+                    out
+                    the form to try a demo of our platform.</p>
+                <a href="#" class="btn btn-outline">Read More</a>
+            </div>
+
+            <div class="showcase-form card">
+                <h2>Request a demo</h2>
+                <form autocomplete="off">
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="Name">
+                    </div>
+                    <div class="form-control">
+                        <input type="text" name="compnay" placeholder="Company Name">
+                    </div>
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="Email">
+                    </div>
+                    <input type="submit" value="Send" class="btn btn-primary">
+                </form>
+            </div>
+        </div>
+    </section>
 
     <script defer src="index.js"></script>
 </body>
