Completed features page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <section class="showcase">
         <div class="container grid">
             <div class="showcase-text">
-                <h1>Easier Deployment</h1>
-                <p>Deploy web apps of all kinds, from large scale eterprise APIs to static websites for individuals.
+                <h1 class="lg">Easier Deployment</h1>
+                <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals.
                     Fill
                     out
                     the form to try a demo of our platform.</p>
